tests/specs/check/check_exclude_option/exclude_option.ts.error.out
TS2304 [ERROR]: Cannot find name 'nothing'.
export { nothing };
         ~~~~~~~
    at [WILDCARD]

error: Type checking failed.
